Use capitalization properly?

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/evantravers/headspace.spoon.git
 [submodule "Spoons/split.spoon"]
 	path = Spoons/split.spoon
-	url = git://github.com/evantravers/split.spoon.git
+	url = git://github.com/evantravers/Split.spoon.git
 [submodule "Spoons/Hyper.spoon"]
 	path = Spoons/Hyper.spoon
 	url = git://github.com/evantravers/Hyper.spoon.git
