--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Spoons/MoveWindows.spoon"]
 	path = Spoons/MoveWindows.spoon
 	url = https://github.com/evantravers/MoveWindows.spoon
+[submodule "Spoons/AutoLayout.spoon"]
+	path = Spoons/AutoLayout.spoon
+	url = https://github.com/evantravers/AutoLayout.spoon
