Update submodule urls
https://github.com/supercollider/supercollider/issues/4578

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "Spoons/Split.spoon"]
 	path = Spoons/Split.spoon
-	url = git://github.com/evantravers/Split.spoon.git
+	url = https://github.com/evantravers/Split.spoon.git
 [submodule "Spoons/Hyper.spoon"]
 	path = Spoons/Hyper.spoon
-	url = git://github.com/evantravers/Hyper.spoon.git
+	url = https://github.com/evantravers/Hyper.spoon.git
 [submodule "Spoons/Headspace.spoon"]
 	path = Spoons/Headspace.spoon
-	url = git@github.com:evantravers/Headspace.spoon.git
+	url = https://github.com/evantravers/Headspace.spoon.git
 [submodule "Spoons/MoveWindows.spoon"]
 	path = Spoons/MoveWindows.spoon
 	url = https://github.com/evantravers/MoveWindows.spoon
