--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 .secrets.json
 localConfig.lua
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
